--- a/codecatch/www/css/codecatch.css
+++ b/codecatch/www/css/codecatch.css
@@ -24,3 +24,18 @@ div.panel-heading {
 .modal-body {
     max-height: 80vh; //Sets the height to 80/100ths of the viewport.
 }
+
+html, body, #map { width:100%; height:100%;} 
+ 
+
+#compass { 
+	height: 100px;
+	width: 100px;
+	position: relative; 
+	margin-right: 0;
+	margin-left: auto; 	
+}
+
+#navbar {
+	height: 10%;
+}
