--- a/codecatch/www/css/codecatch.css
+++ b/codecatch/www/css/codecatch.css
@@ -42,3 +42,12 @@ html, body, #map {
 #navbar {
 	height: 10%;
 }
+
+#box1 {
+  background-color: orange;
+  position: absolute;
+  width: 250px;
+  height: 175px;
+  top: 150px;
+  left: 200px;
+}
