--- a/codecatch/www/css/codecatch.css
+++ b/codecatch/www/css/codecatch.css
@@ -43,11 +43,44 @@ html, body, #map {
 	height: 10%;
 }
 
-#box1 {
-  background-color: orange;
-  position: absolute;
-  width: 250px;
-  height: 175px;
-  top: 150px;
-  left: 200px;
+.btn-circleRes {
+  width: 49px;
+  height: 49px;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 18px;
+  line-height: 2.00;
+  border-radius: 30px;
+  z-index: 1;
+  position:fixed;
+  top: 20px;
+  left: 170px;
+}
+
+.btn-circlePoi {
+  width: 49px;
+  height: 49px;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 20px;
+  line-height: 2.00;
+  border-radius: 30px;
+  z-index: 1;
+  position:fixed;
+  top: 20px;
+  left: 110px;
+}
+
+.btn-circlePos {
+  width: 49px;
+  height: 49px;
+  text-align: center;
+  padding: 5px 0;
+  font-size: 20px;
+  line-height: 2.00;
+  border-radius: 30px;
+  z-index: 1;
+  position:fixed;
+  top: 20px;
+  left: 50px;
 }
