--- a/codecatch/www/css/codecatch.css
+++ b/codecatch/www/css/codecatch.css
@@ -26,8 +26,11 @@ div.panel-heading {
 }
 
 html, body, #map { 
-	width:100%; 
-	height:100%;
+  position:fixed;
+  top:50px;
+  bottom:0px;
+  width:100%; 
+	/*height:100%;*/
 } 
  
 
